<?xml version="1.0" encoding="utf-8"?>
<layout>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.ExerciseFragment">

        <ImageView
            android:id="@+id/hand_image"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/exercise_video"
            android:src="@drawable/hand"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/exercise_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/close_and_open_hands"
            android:textSize="28sp"
            app:layout_constraintEnd_toEndOf="@id/hand_image"
            app:layout_constraintStart_toStartOf="@id/hand_image"
            app:layout_constraintTop_toBottomOf="@id/hand_image" />

        <Button
            android:id="@+id/btn_done"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/done"
            android:textAllCaps="false"
            android:textSize="26sp"
            app:layout_constraintEnd_toEndOf="@id/exercise_description"
            app:layout_constraintStart_toStartOf="@id/exercise_description"
            app:layout_constraintTop_toBottomOf="@id/exercise_description" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_done">

            <TextView
                android:id="@+id/series"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:text="@string/series"
                android:textSize="@dimen/textInfo"
                app:layout_constraintEnd_toStartOf="@id/repetitions"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/repetitions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/repetitions"
                android:textSize="@dimen/textInfo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/rest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/rest"
                android:textSize="@dimen/textInfo"
                app:layout_constraintStart_toEndOf="@id/repetitions"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/seriesnumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_3x"
                style="@style/normalInfo"
                app:layout_constraintStart_toStartOf="@id/series"
                app:layout_constraintTop_toBottomOf="@id/series"
                app:layout_constraintEnd_toEndOf="@id/series"/>

            <TextView
                android:id="@+id/repetitionsnumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_10"
                style="@style/normalInfo"
                app:layout_constraintStart_toStartOf="@id/repetitions"
                app:layout_constraintEnd_toEndOf="@id/repetitions"
                app:layout_constraintTop_toBottomOf="@id/repetitions"/>

            <TextView
                android:id="@+id/resttime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_20s"
                style="@style/normalInfo"
                app:layout_constraintStart_toStartOf="@id/rest"
                app:layout_constraintEnd_toEndOf="@id/rest"
                app:layout_constraintTop_toBottomOf="@id/rest"/>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>